app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-petclinic
  name: spring-petclinic
spec:
  ports:
  ports:
    - port: 55023
      targetPort: 30001
  selector:
    app: spring-petclinic
  sessionAffinity: None
  type: LoadBalancer
